[workspace]
members = [
  "loki-api",
  "loki-api/generate",
]

[package]
name = "tracing-loki"
version = "0.0.1"
edition = "2021"

[dependencies]
loki-api = { version = "0.0.1", path = "loki-api" }
reqwest = "0.11.10"
snap = "1.0.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["sync"] }
tokio-stream = "0.1.8"
tracing = "0.1.32"
tracing-core = "0.1.23"
tracing-log = "0.1.2"
tracing-serde = "0.1.3"
tracing-subscriber = "0.3.9"
url = "2.2.2"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
