[workspace]
members = [
  "loki-api",
  "loki-api/generate",
]

[package]
name = "tracing-loki"
description = "A tracing layer for shipping logs to Grafana Loki"
authors = ["hrxi <hrrrxi@gmail.com>"]
repository = "https://github.com/hrxi/tracing-loki"
keywords = ["tracing", "loki"]
version = "0.2.5"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
loki-api = { version = "0.1.0", path = "loki-api" }
reqwest = { version = ">=0.11.10,<0.13.0", default-features = false }
snap = "1.0.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["sync"] }
tokio-stream = "0.1.8"
tracing = "0.1.32"
tracing-core = "0.1.23"
tracing-log = "0.1.2"
tracing-serde = "0.1.3"
tracing-subscriber = "0.3.9"
url = "2.2.2"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["compat-0-2-1", "native-tls"]
compat-0-2-1 = []

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
