[workspace]
members = [
  "loki-api",
  "loki-api/generate",
]

[package]
name = "tracing-loki"
description = "A tracing layer for shipping logs to Grafana Loki"
authors = ["hrxi <hrrrxi@gmail.com>"]
repository = "https://github.com/hrxi/tracing-loki"
keywords = ["tracing", "loki"]
version = "0.2.6"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
loki-api = { version = "0.1.0", path = "loki-api" }
reqwest = { version = ">=0.11.10,<0.13.0", default-features = false }
snap = "1.1.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["sync"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-core = "0.1.33"
tracing-log = ">=0.1.2,<0.3.0"
tracing-serde = ">=0.1.3,<0.3.0"
tracing-subscriber = "0.3.19"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }

[features]
default = ["compat-0-2-1", "native-tls"]
compat-0-2-1 = []

native-tls = ["reqwest/native-tls"]
rustls = ["reqwest/rustls-tls"]
