[package]
name = "loki-api-generate"
description = "Code generation for loki-api"
authors = ["hrxi <hrrrxi@gmail.com>"]
repository = "https://github.com/hrxi/tracing-loki"
keywords = ["tracing", "loki"]
version = "0.0.1"
license = "MIT/Apache-2.0"
edition = "2021"

[build-dependencies]
prost-build = "0.9"
